--- a/octobot_node/ui/src/index.css
+++ b/octobot_node/ui/src/index.css
@@ -42,77 +42,84 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.5982 0.10687 182.4689);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.5982 0.10687 182.4689);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --radius: 0.5rem;
+  --background: oklch(0.9838 0.0035 247.9);
+  --foreground: oklch(0.2073 0.0728 275.0);
+  --card: oklch(1.0000 0.0000 89.9);
+  --card-foreground: oklch(0.2073 0.0728 275.0);
+  --popover: oklch(0.9843 0.0017 247.8);
+  --popover-foreground: oklch(0.2073 0.0728 275.0);
+  --primary: oklch(0.8216 0.0788 197.1);
+  --primary-foreground: oklch(0.2073 0.0728 275.0);
+  --secondary: oklch(0.9693 0.0044 236.5);
+  --secondary-foreground: oklch(0.2073 0.0728 275.0);
+  --tertiary: oklch(0.2885 0.1208 269.3);
+  --tertiary-foreground: oklch(0.9693 0.0044 236.5);
+  --muted: oklch(0.9684 0.0068 247.9);
+  --muted-foreground: oklch(0.5547 0.0407 257.4);
+  --accent: oklch(0.8216 0.0788 197.1);
+  --accent-foreground: oklch(0.2073 0.0728 275.0);
+  --destructive: oklch(0.6368 0.2078 25.3);
+  --destructive-foreground: oklch(0.9838 0.0035 247.9);
+  --border: oklch(0.9290 0.0126 255.5);
+  --input: oklch(0.9290 0.0126 255.5);
+  --ring: oklch(0.8216 0.0788 197.1);
+  --chart-1: oklch(0.2073 0.0728 275.0);
+  --chart-2: oklch(0.5547 0.0407 257.4);
+  --chart-3: oklch(0.9684 0.0068 247.9);
+  --chart-4: oklch(0.9290 0.0126 255.5);
+  --chart-5: oklch(0.6368 0.2078 25.3);
+  --sidebar: oklch(1.0000 0.0000 89.9);
+  --sidebar-foreground: oklch(0.2073 0.0728 275.0);
+  --sidebar-primary: oklch(0.8216 0.0788 197.1);
+  --sidebar-primary-foreground: oklch(0.2073 0.0728 275.0);
+  --sidebar-accent: oklch(0.8216 0.0788 197.1);
+  --sidebar-accent-foreground: oklch(0.2073 0.0728 275.0);
+  --sidebar-border: oklch(0.9290 0.0126 255.5);
+  --sidebar-ring: oklch(0.8216 0.0788 197.1);
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.65 0.10687 182.4689);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.65 0.10687 182.4689);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: oklch(0.2073 0.0728 275.0);
+  --foreground: oklch(0.9693 0.0044 236.5);
+  --card: oklch(0.2432 0.0768 268.5);
+  --card-foreground: oklch(0.9693 0.0044 236.5);
+  --popover: oklch(0.2073 0.0728 275.0);
+  --popover-foreground: oklch(0.9693 0.0044 236.5);
+  --primary: oklch(0.8216 0.0788 197.1);
+  --primary-foreground: oklch(0.2073 0.0728 275.0);
+  --secondary: oklch(0.2885 0.1208 269.3);
+  --secondary-foreground: oklch(0.9693 0.0044 236.5);
+  --tertiary: oklch(0.2885 0.1208 269.3);
+  --tertiary-foreground: oklch(0.9693 0.0044 236.5);
+  --muted: oklch(0.2800 0.0369 260.0);
+  --muted-foreground: oklch(0.7107 0.0351 256.8);
+  --accent: oklch(0.2800 0.0369 260.0);
+  --accent-foreground: oklch(0.9693 0.0044 236.5);
+  --destructive: oklch(0.3959 0.1331 25.7);
+  --destructive-foreground: oklch(0.9693 0.0044 236.5);
+  --border: oklch(0.2800 0.0369 260.0);
+  --input: oklch(0.2800 0.0369 260.0);
+  --ring: oklch(0.8216 0.0788 197.1);
+  --chart-1: oklch(0.9693 0.0044 236.5);
+  --chart-2: oklch(0.7107 0.0351 256.8);
+  --chart-3: oklch(0.2800 0.0369 260.0);
+  --chart-4: oklch(0.8688 0.0198 252.8);
+  --chart-5: oklch(0.3959 0.1331 25.7);
+  --radius: 0.5rem;
+  --sidebar: oklch(0.2432 0.0768 268.5);
+  --sidebar-foreground: oklch(0.9693 0.0044 236.5);
+  --sidebar-primary: oklch(0.8216 0.0788 197.1);
+  --sidebar-primary-foreground: oklch(0.2073 0.0728 275.0);
+  --sidebar-accent: oklch(0.2800 0.0369 260.0);
+  --sidebar-accent-foreground: oklch(0.9693 0.0044 236.5);
+  --sidebar-border: oklch(0.2800 0.0369 260.0);
+  --sidebar-ring: oklch(0.8216 0.0788 197.1);
 }
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
